--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "engines" : {
-    "node" : "v20.17.0"
+  "engines": {
+    "node": "v20.17.0"
   },
   "name": "major-projects",
   "version": "1.0.0",
@@ -28,6 +28,7 @@
     "mongoose": "^8.8.2",
     "multer": "^1.4.5-lts.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemon": "^3.1.10",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0"
